tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__OneDragonEggisNo-AAAAAAAAAAAAAAAAAAAGdw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1655,
  "prerequisites": [
    1233,
    186,
    940
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Dragon eggs are very rare and only drop after a dragon's death. How about I show you a way to recreate this powerful item out of a monster spawn egg?\n\nLet's start with step one. Using a mob spawn egg (any work, you can purchase one from the CCC tab if you do not have one), growth medium, and bacteria to create a bigger egg. This process needs one hour.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lOne Dragon Egg is Not Enough Mr Bond",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1233,
    186,
    940
  ],
  "rewards": [],
  "tasks": []
}
