tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__OtherOres-AAAAAAAAAAAAAAAAAAAE3A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1244,
  "optional_prerequisites": [
    187,
    188
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "You can find several other ores on these planets (some of which actually don't have a use, honestly), but the most useful right now are probably the ones on the right. There's also Draconium, Jade, Mirabilite, Tanzanite, Vinteum, and Vyroxes.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lOther Ores",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
