tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__PlatinumProcessi-AAAAAAAAAAAAAAAAAAAI-A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2296,
  "prerequisites": [
    2297
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Platinum Chloride? You were promised Pure Platinum Metal at a much higher efficiency than just smelting it! No worries, just react the Platinum Chloride with Calcium and you're done. The Calcium and Chlorine can be recycled as well!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lPlatinum Processing, Step 4",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    2297
  ],
  "rewards": [],
  "tasks": []
}
