tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__PlatinumProcessi-AAAAAAAAAAAAAAAAAAAI-Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2297,
  "prerequisites": [
    2299,
    2301
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Hooray! All my Platinum Metal is now a fluid.... Time to add the second chemical to recrystallize the dust.\n\nYou do different things with each of the results:\n\nReprecipitated Platinum: Go to step 4, the last step.\nPlatinum Salt: Go to the recycling step.\nPalladium Enriched Ammonia: Keep it like the Platinum Residue until IV. Or process it now if you like, but you don't §oneed§r it until later.\nOthers: Can be reused.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lPlatinum Processing, Step 3",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    2299,
    2301
  ],
  "rewards": [],
  "tasks": []
}
