tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__PlatinumProcessi-AAAAAAAAAAAAAAAAAAAI_A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2300,
  "prerequisites": [
    176
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Aqua Regia, the water of the Kings, is a chemical that will dissolve Platinum. The perfect solvent for Platinum processing. Get a few Cells of it.\n\n§6Don't wanna do all these cell quests because you already automated it? Hold a stack of any platline dust to skip to the end of that chain.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lPlatinum Processing, Step 1",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    176
  ],
  "rewards": [],
  "tasks": []
}
